Update and rename readme.txt to readme.html

--- a/readme.html
+++ b/readme.html
@@ -1,5 +1,7 @@
-Cocktail picker user manual
-------------------------------------
+#Read me
+##Cocktail picker user manual
+
+Author: S Haliburton
 
 The cocktail picker is a simple app that requires you to enter 3 choices from a user input form.
 
